# aura-network

./: .env.example  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
crates/auth/: Cargo.toml
crates/auth/src/: extractors.rs  jwks.rs  validate.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs  ids.rs  lib.rs  pagination.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0001_create_users.sql  0002_create_organizations.sql  0003_create_org_members.sql  0004_create_org_invites.sql  0005_create_agents.sql  0006_create_profiles.sql  0007_create_projects.sql  0008_create_follows.sql  0009_create_activity_events.sql  0010_create_comments.sql  0011_create_token_usage_daily.sql  0012_create_platform_stats.sql  0013_add_profile_unique_indexes.sql  0014_add_cascade_on_profile_delete.sql  0015_add_user_location_website.sql  0016_add_org_description_avatar_project_description.sql  0017_add_project_status.sql  0018_create_org_integrations.sql  0019_add_post_type_and_push_fields.sql  0020_expand_event_type_check.sql  0021_drop_activity_events_profile_fk.sql  0022_make_usage_org_id_optional.sql  0023_add_project_visibility.sql  0024_add_agent_machine_type.sql  0025_add_usage_duration_ms.sql  0026_add_usage_project_id.sql  0027_add_agent_wallet_address.sql  0028_add_last_login_at.sql  0029_add_agent_vm_id.sql  0030_activity_events_project_on_delete_set_null.sql  0031_create_access_codes.sql  0032_refactor_access_codes_reusable.sql  0033_create_feedback_votes.sql  0034_add_feedback_event_type.sql  0035_add_deleted_to_project_status.sql  0036_add_usage_task_id.sql  0037_add_marketplace_fields.sql  0038_add_agent_permissions.sql
crates/domain/agents/: Cargo.toml
crates/domain/agents/src/: handlers.rs  models.rs  repo.rs
crates/domain/feed/: Cargo.toml
crates/domain/feed/src/: handlers.rs  lib.rs  models.rs  repo.rs
crates/domain/integrations/: Cargo.toml
crates/domain/integrations/src/: models.rs  repo.rs
crates/domain/orgs/: Cargo.toml
crates/domain/orgs/src/: handlers.rs  models.rs  repo.rs
crates/domain/projects/: Cargo.toml
crates/domain/projects/src/: handlers.rs  lib.rs  models.rs  repo.rs
crates/domain/social/: Cargo.toml
crates/domain/social/src/: handlers.rs  models.rs  repo.rs
crates/domain/usage/: Cargo.toml
crates/domain/usage/src/: handlers.rs  models.rs  repo.rs
crates/domain/users/: Cargo.toml
crates/domain/users/src/: handlers.rs  models.rs  repo.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  router.rs  state.rs
crates/server/src/handlers/: access_codes.rs  agents.rs  feed.rs  integrations.rs  internal.rs  mod.rs  orgs.rs  projects.rs  social.rs  usage.rs  users.rs  ws.rs
crates/server/tests/: access_codes_test.rs  agents_test.rs  auth_test.rs  feed_test.rs  health_test.rs  integrations_test.rs  internal_test.rs  orgs_test.rs  profiles_test.rs  projects_test.rs  social_test.rs  usage_test.rs  users_test.rs
crates/server/tests/common/: mod.rs
docs/: api.md  feed-posts-integration.md
